app/globals.css
@import "tailwindcss";

@theme {
  --breakpoint-3xl: 1570px;
}


.padding {
  @apply px-6 lg:px-10 2xl:px-12 3xl:px-14;
}

* {
  cursor: none !important;
}

@layer base {
  html {
    font-size: 16px;
  }


  @media (max-width: 1440px) {
    html {
      font-size: 14px;
    }


  }

  @media (max-width: 768px) {
    html {
      font-size: 13px;
    }
  }

  @media (max-width: 480px) {
    html {
      font-size: 12px;
    }


  }
}

@layer utilities {
  *::-webkit-scrollbar {
    display: none;
  }

  * {
    -ms-overflow-style: none;
    /* IE and Edge */
    scrollbar-width: none;
    /* Firefox */
  }
}

/* temp change */

